# WinOptimize

./: .gitmodules  README.md  build.gradle  gradle.properties  settings.gradle
.github/workflows/: build.yml
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/app/: PluviaApp.kt
app/src/main/app/config/: SettingsConfig.kt
app/src/main/app/db/: PluviaDatabase.kt
app/src/main/app/provider/: WinlatorFilesProvider.java
app/src/main/app/service/: NetworkMonitor.kt
app/src/main/app/shell/: BoxBlurTransformation.kt  Eyeglasses2Icon.kt  LibraryGameLaunchScreen.kt  StoreGameDetailScreen.kt  UnifiedActivity.kt  WorkshopScreen.kt
app/src/main/app/update/: UpdateChecker.kt
app/src/main/assets/: extras.tzst  proton-9.0-arm64ec.txz
app/src/main/assets/ddrawrapper/: dd7to9.tzst  ddraw-11.8.tzst  ddraw-4.21.tzst
app/src/main/assets/graphics_driver/: wrapper-gamenative.tzst  wrapper.tzst
app/src/main/assets/metadata/: debug_channels.json  fexcore_env_vars.json  gpu_cards.json  regions.json  startmenu.json
app/src/main/assets/wincomponents/: wincomponents.json
app/src/main/assets/wnsteam/: lsteamclient-x86_64.tzst
app/src/main/assets/xvfb-arm64/: winnative-driverquery-noop  winnative-steamwebhelper-wrapper
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/patchelf/: CMakeLists.txt
app/src/main/cpp/winlator/: fakeinput.cpp  native_content_io.cpp  ring_fence.c  sysvshared_memory.c  xconnector_epoll.c
app/src/main/cpp/wn-libsteamclient/: CMakeLists.txt
app/src/main/cpp/wn-libsteamclient/include/wn_libsteamclient/: callback_registry.h  callbacks.h  runtime_state.h  tcp_services.h
app/src/main/cpp/wn-libsteamclient/include/wn_steam/: cm_bridge.h
app/src/main/cpp/wn-libsteamclient/src/: api_entry.cpp  callback_registry.cpp  iclient_engine.cpp  isteam_client.cpp  isteam_stubs.cpp  jni_pushed_state.cpp  runtime_state.cpp  tcp_services.cpp
app/src/main/cpp/wn-refactor-size/: refactorsize.c  refactorsize.rc
app/src/main/cpp/wn-steam-client/: CMakeLists.txt
app/src/main/cpp/wn-steam-client/rust/: Cargo.toml
app/src/main/cpp/wn-steam-client/rust/src/: auth_session.rs  authenticator.rs  base64.rs  cdn_client.rs  chat_image.rs  cm_bridge.rs  cm_client.rs  cm_runtime.rs  cm_server.rs  cm_server_list.rs  cmsg_protobuf_header.rs  content_manifest.rs  crypto.rs  depot_chunk.rs  depot_config.rs  depot_downloader.rs  depot_writer.rs  emsg.rs  encrypted_channel.rs  handshake_messages.rs  heartbeat.rs  jni.rs  job_manager.rs  key_dictionary.rs  lib.rs  library_store.rs  proto_envelope.rs  proto_wire.rs  rsa_password.rs  steam_directory.rs  ticket_cache.rs  transport.rs  vdf.rs  version.rs  wine_bridge.rs  wire_format.rs  ws_connection.rs
app/src/main/cpp/wn-steam-client/rust/src/pb/: cauthentication.rs  ccloud.rs  ccontentserverdirectory.rs  cfamilygroups.rs  cfriendmessages.rs  cinventory.rs  cmsg_client_change_status.rs  cmsg_client_friends_list.rs  cmsg_client_games_played.rs  cmsg_client_get_app_ownership_ticket.rs  cmsg_client_get_depot_decryption_key.rs  cmsg_client_get_user_stats.rs  cmsg_client_kick_playing_session.rs  cmsg_client_license_list.rs  cmsg_client_mms_get_lobby_list.rs  cmsg_client_mms_lobby_data.rs  cmsg_client_mms_lobby_ops.rs  cmsg_client_persona.rs  cmsg_client_pics.rs  cmsg_client_playing_session_state.rs  cmsg_client_request_encrypted_app_ticket.rs  cmsg_client_store_user_stats.rs  cmsg_clientserver_login.rs  cplayer.rs  cpublishedfile.rs  mod.rs
app/src/main/cpp/wn-steam-launcher/: build.sh  clean_shutdown.cpp  clean_shutdown.h
app/src/main/cpp/wn-steamapi-bridge/: CMakeLists.txt  build.sh  gen_forward_def.py  gen_forwarders.py  gen_overrides.py  steam_api_bridge.def  steam_api_bridge_callbacks.c  steam_api_bridge_flat.c  steam_api_bridge_steamclient.c
app/src/main/cpp/xvfb-setxid-shim/: build.sh
app/src/main/feature/leaderboard/: SessionRecordingController.kt
app/src/main/feature/setup/: SetupWizardActivity.kt  SetupWizardDriversDialogFragment.kt
app/src/main/feature/shortcuts/: FrontendExporter.java  ShortcutBroadcastReceiver.java  ShortcutSettingsComposeDialog.kt  ShortcutsFragment.java  ShortcutsScreen.kt
app/src/main/feature/steamcloudsync/: SteamAutoCloud.kt  SteamCloudConflictDialog.kt  SteamCloudConflictUi.kt  SteamCloudHistoryProvider.kt  SteamCloudSyncHelper.kt  SteamExitCloudSync.kt  SteamLaunchCloudSync.kt  SteamSaveSnapshotManager.kt
app/src/main/feature/sync/: CloudSyncHelper.kt  EpicCloudConflictUi.kt  EpicLaunchCloudSync.kt  GogCloudConflictUi.kt  GogLaunchCloudSync.kt
app/src/main/res/anim/: content_dialog_enter.xml  content_dialog_exit.xml
app/src/main/res/drawable/: content_action_button_background.xml  content_dialog_background.xml  content_dialog_button_neutral.xml  content_dialog_button_positive.xml  content_dialog_surface.xml  content_popup_menu_background.xml  env_vars_row_background.xml  help_popup_background.xml  ic_hud_arrow_east.xml  ic_hud_arrow_north.xml  ic_hud_arrow_north_east.xml  ic_hud_arrow_north_west.xml  ic_hud_arrow_south.xml  ic_hud_arrow_south_east.xml  ic_hud_arrow_south_west.xml  ic_hud_arrow_west.xml  ic_hud_plug.xml  ic_launcher_background.xml  ic_multi_select_checked.xml  ic_multi_select_unchecked.xml  image_picker_frame_background.xml  multi_select_checkbox.xml  other_settings_text_input_background.xml  pickercolorcontrol.xml  popup_list_item_selector.xml
app/src/main/res/drawable-anydpi/: ic_notification.xml
app/src/main/res/font/: inter.xml
app/src/main/res/layout/: color_picker_popup.xml  content_dialog.xml  cpu_list_item.xml  env_vars_list_item.xml  frame_rating.xml  multi_select_list_item.xml  spinner_dropdown_item_themed.xml  xserver_display_activity.xml
app/src/main/res/values/: refs.xml  (+4 more)
app/src/main/res/values-b+es+419/: arrays.xml  strings.xml
app/src/main/rust/wn-steam-tools/: Cargo.toml  build-linux-glibc.sh
app/src/main/rust/wn-steam-tools/src/: lib.rs
app/src/main/sharedmemory/: RequestCodes.java  SysVSHMConnectionHandler.java  SysVSHMRequestHandler.java
gradle/: libs.versions.toml
tools/: update-gbe-fork.sh
(+556 files in other folders)
