[package]
name = "wn-steam-tools"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
publish = false

[lib]
name = "winnative_setxid_noop"
crate-type = ["cdylib"]

[[bin]]
name = "winnative_steamwebhelper_wrapper"
path = "src/bin/winnative_steamwebhelper_wrapper.rs"

[[bin]]
name = "winnative_driverquery_noop"
path = "src/bin/winnative_driverquery_noop.rs"

[dependencies]
libc = "0.2"

[profile.release]
codegen-units = 1
lto = "thin"
strip = "symbols"
